[package]
name = "crabcan"
version = "0.1.0"
edition = "2021"
rust-version = "1.63"
description = "My implementation of Litchi Pi's 'Writing a Container in Rust' tutorial"
authors = ["litchipi", "Austin Norris"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
log = "0.4.14"
env_logger = "0.9.0"
nix = "0.22.1"
scan_fmt = "0.2.6"
rand = "0.8.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"